# sushi-backend

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migration/: env.py
migration/versions/: 05060916069d_.py  cb0bda60196e_.py  f2f831195b9b_.py
sushiapp/: __main__.py  app.py  database.py  settings.py  tables.py
sushiapp/api/: Auth.py  Categories.py  Orders.py  Products.py  __init__.py
sushiapp/models/: Auth.py  Categories.py  Orders.py  Products.py  __init__.py
sushiapp/services/: Auth.py  Categories.py  Orders.py  Products.py  __init__.py
